--- a/styles/app.css
+++ b/styles/app.css
@@ -34,10 +34,8 @@
 h1,
 h2,
 h3,
-h4,
-h5,
-h6 {
-    font-family: "Nunito Sans";
+h4 {
+    font-family: "Nunito Sans", Helvetica, Arial, sans-serif;
 }
 
 body {
