--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -559,10 +559,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 h1,
 h2,
 h3,
-h4,
-h5,
-h6 {
-  font-family: "Nunito Sans";
+h4 {
+  font-family: "Nunito Sans", Helvetica, Arial, sans-serif;
 }
 
 body {
