--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -476,40 +476,127 @@ Ensure the default browser behavior of the `hidden` attribute.
   position: relative;
 }
 
-.right-5 {
-  right: 1.25rem;
+.sticky {
+  position: -webkit-sticky;
+  position: sticky;
 }
 
-.right-48 {
-  right: 12rem;
+.bottom-0 {
+  bottom: 0px;
 }
 
-.right-14 {
-  right: 3.5rem;
+.top-3 {
+  top: 0.75rem;
 }
 
-.right-0 {
-  right: 0px;
+.right-3 {
+  right: 0.75rem;
 }
 
-.right-10 {
-  right: 2.5rem;
+.top-0 {
+  top: 0px;
 }
 
 .right-16 {
   right: 4rem;
 }
 
-.mt-5 {
+.z-50 {
+  z-index: 50;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.my-5 {
   margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
 }
 
 .ml-auto {
   margin-left: auto;
 }
 
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.block {
+  display: block;
+}
+
 .flex {
   display: flex;
+}
+
+.grid {
+  display: grid;
+}
+
+.h-52 {
+  height: 13rem;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.h-40 {
+  height: 10rem;
+}
+
+.h-6 {
+  height: 1.5rem;
+}
+
+.w-96 {
+  width: 24rem;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.w-\[1000px\] {
+  width: 1000px;
+}
+
+.w-40 {
+  width: 10rem;
+}
+
+.w-\[600px\] {
+  width: 600px;
+}
+
+.w-6 {
+  width: 1.5rem;
+}
+
+.max-w-\[1235px\] {
+  max-width: 1235px;
+}
+
+.max-w-full {
+  max-width: 100%;
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.flex-col {
+  flex-direction: column;
 }
 
 .items-center {
@@ -520,9 +607,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   justify-content: center;
 }
 
-.gap-x-2 {
-  -moz-column-gap: 0.5rem;
-       column-gap: 0.5rem;
+.gap-10 {
+  gap: 2.5rem;
+}
+
+.gap-5 {
+  gap: 1.25rem;
 }
 
 .gap-x-12 {
@@ -530,21 +620,53 @@ Ensure the default browser behavior of the `hidden` attribute.
        column-gap: 3rem;
 }
 
-.p-10 {
-  padding: 2.5rem;
+.gap-x-2 {
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
 }
 
-.p-20 {
-  padding: 5rem;
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.rounded-full {
+  border-radius: 9999px;
+}
+
+.bg-\[rgba\(0\2c 0\2c 0\2c 0\.60\)\] {
+  background-color: rgba(0,0,0,0.60);
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .p-5 {
   padding: 1.25rem;
 }
 
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
+.p-10 {
+  padding: 2.5rem;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .px-10 {
@@ -552,9 +674,18 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 2.5rem;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
+.pt-10 {
+  padding-top: 2.5rem;
+}
+
+.text-7xl {
+  font-size: 4.5rem;
+  line-height: 1;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .text-3xl {
@@ -567,37 +698,47 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 2rem;
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
-.text-7xl {
-  font-size: 4.5rem;
-  line-height: 1;
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
-.font-medium {
-  font-weight: 500;
+.font-light {
+  font-weight: 300;
 }
 
-.leading-tight {
-  line-height: 1.25;
+.font-normal {
+  font-weight: 400;
 }
 
-.text-black {
+.capitalize {
+  text-transform: capitalize;
+}
+
+.text-white {
   --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-gray-400 {
+.text-blue-600 {
   --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
+  color: rgb(37 99 235 / var(--tw-text-opacity));
 }
 
-.underline {
-  -webkit-text-decoration-line: underline;
-          text-decoration-line: underline;
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.drop-shadow-lg {
+  --tw-drop-shadow: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .transition-all {
@@ -606,69 +747,29 @@ Ensure the default browser behavior of the `hidden` attribute.
   transition-duration: 150ms;
 }
 
+.duration-500 {
+  transition-duration: 500ms;
+}
+
 .duration-300 {
   transition-duration: 300ms;
 }
 
-.duration-150 {
-  transition-duration: 150ms;
-}
-
-.duration-200 {
-  transition-duration: 200ms;
-}
-
-@font-face {
-  font-family: "Nunito Sans";
-
-  font-style: normal;
-
-  font-weight: 700;
-
-  src: url("/fonts/nunito-sans/nunito-sans-v11-latin-700.eot");
-
-  src: local(""),
-        url("/fonts/nunito-sans/nunito-sans-v11-latin-700.eot?#iefix")
-            format("embedded-opentype"),
-        url("/fonts/nunito-sans/nunito-sans-v11-latin-700.woff2")
-            format("woff2"),
-        url("/fonts/nunito-sans/nunito-sans-v11-latin-700.woff") format("woff"),
-        url("/fonts/nunito-sans/nunito-sans-v11-latin-700.ttf")
-            format("truetype"),
-        url("/fonts/nunito-sans/nunito-sans-v11-latin-700.svg#NunitoSans")
-            format("svg");
-}
-
-@font-face {
-  font-family: "Charter";
-
-  font-style: normal;
-
-  font-weight: 400;
-
-  src: url("/fonts/charter/charter_regular-webfont.eot");
-
-  src: local(""),
-        url("/fonts/charter/charter_regular-webfont.eot?#iefix")
-            format("embedded-opentype"),
-        url("/fonts/charter/charter_regular-webfont.woff") format("woff"),
-        url("/fonts/charter/charter_regular-webfont.ttf") format("truetype");
-}
-
-h1,
-h2,
-h3,
-h4 {
-  font-family: "Nunito Sans", Helvetica, Arial, sans-serif;
-}
-
 body {
-  font-family: "Charter", Georgia, Cambria, "Times New Roman", Times, serif;
+  font-family: "Lato", serif;
 }
 
-.hover\:text-amber-300:hover {
-  --tw-text-opacity: 1;
-  color: rgb(252 211 77 / var(--tw-text-opacity));
+.logo-font {
+  font-family: "Square Peg", "Bradley Hand";
+}
+
+.nav-font {
+  font-family: "Kite One", "Bradley Hand";
+}
+
+.text-shadow {
+  text-shadow: -1px -1px 0 rgb(0 0 0 / 50%), 1px -1px 0 rgb(0 0 0 / 50%),
+        -1px 1px 0 rgb(0 0 0 / 50%), 1px 1px 0 rgb(0 0 0 / 50%);
 }
 
 .hover\:text-amber-400:hover {
@@ -676,24 +777,26 @@ body {
   color: rgb(251 191 36 / var(--tw-text-opacity));
 }
 
+.hover\:text-blue-400:hover {
+  --tw-text-opacity: 1;
+  color: rgb(96 165 250 / var(--tw-text-opacity));
+}
+
 .hover\:text-lime-400:hover {
   --tw-text-opacity: 1;
   color: rgb(163 230 53 / var(--tw-text-opacity));
 }
 
-@media (min-width: 768px) {
-  .md\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
+.hover\:underline:hover {
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}
 
-  .md\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
+.hover\:opacity-80:hover {
+  opacity: 0.8;
+}
 
-  .md\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
+.hover\:drop-shadow-xl:hover {
+  --tw-drop-shadow: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03)) drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
