--- a/styles/app.css
+++ b/styles/app.css
@@ -18,3 +18,7 @@ body {
     text-shadow: -1px -1px 0 rgb(0 0 0 / 50%), 1px -1px 0 rgb(0 0 0 / 50%),
         -1px 1px 0 rgb(0 0 0 / 50%), 1px 1px 0 rgb(0 0 0 / 50%);
 }
+
+#disqus_thread {
+    margin-top: 30px;
+}
